tests/parser/valid/12_assignments.src
fn test() {
    int x = 0;
    x = 10;
    x += 1;
}
