tests/parser/invalid/09_incomplete_expression.src
fn test() {
    int x = 1 + ;
}
